[tool.poetry]
name = "planning-library"
version = "0.1.4"
description = "LangChain-based library with planning algorithms for AI Agents."
authors = ["Alexandra Eliseeva <alexandra.eliseeva@jetbrains.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "planning_library" },
    { include = "planning_library/py.typed" },
]
exclude = [
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = "^0.1.4"
langchain-core = "^0.1.30"
langgraph = "^0.0.26"
gymnasium = "^0.29.1"
urllib3 = "<1.27"

[tool.poetry.group.examples.dependencies]
langchain-experimental = "^0.0.49"
langchain-openai = "^0.0.5"
jupyter = "^1.0.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
moviepy = "^1.0.3"
alfworld = {extras = ["full"], version = "^0.3.3"}

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.5.0"
pytest = "^7.4.0"
ruff = "^0.3.2"
pyright = "^1.1.368"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
order_by_type = true

[tool.mypy]
python_version = "3.9"

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true